Wed Jun 12 19:57:55 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/syntax.rb : Fix controlling-expression deduction of
	  iteration-statements in order to adopt the ordinary expression when
	  no control breaking condition is found in the iteration body.

	* features/code_check/W0422.feature : Add scenario to reproduce a known
	  bug.

Wed Jun 12 15:51:38 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/object.rb : Add missing value coercing in evaluation
	  of variable definition when the variable has already been declared.

Wed Jun 12 11:43:35 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W0459.feature : Add scenario to reproduce a known
	  bug.

	* lib/adlint/cc1/interp.rb : Fix conditional-expression evaluation in
	  order to evaluate controlling expression in the same manner as that
	  of if-statement.

	* lib/adlint/cc1/mediator.rb : Fix pointer dereference behavior in
	  order to find possible pointee objects when the pointer value is not
	  definite.

Fri Jun  7 11:45:23 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/expr.rb : Revise global constant array subscript
	  evaluation policy in order to make undefined-value when the subscript
	  value is indefinite.

Fri Jun  7 10:44:06 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W1071.feature : Add scenario to reproduce the
	  broken array subscript evaluation in controlling expressions.

	* lib/adlint/cc1/expr.rb : Fix bad array subscript evaluation so that
	  the array-subscript-expression makes undefined-value when no
	  designated object is found.

Thu Jun  6 18:36:13 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W0613.feature : Add scenario to reproduce
	  false-positive of W0613 code check when an array-subscript-expression
	  refers to the global constant array is specified as the controlling
	  expression.
