@@ -229,6 +229,7 @@ features/code_check/W0585.feature
 features/code_check/W0599.feature
 features/code_check/W0606.feature
 features/code_check/W0610.feature
+features/code_check/W0612.feature
 features/code_check/W0613.feature
 features/code_check/W0611.feature
 features/code_check/W0635.feature
